fix: alignment issue in mobile UI once again

--- a/styles.css
+++ b/styles.css
@@ -175,12 +175,9 @@ input:active {
         flex-direction: column-reverse;
         height: fit-content;
         width: 100%;
-        margin: 5vh 0 0 0;
+        margin: 2vh 0 0 0;
         min-width: max-content;
 
-    }
-    form{
-        width: 420px;
     }
     .card{
         width: 360px;
@@ -191,10 +188,10 @@ input:active {
     }
     #front{
         margin-right: 0;
-        margin-right: 30px;
+        margin-right: 20px;
         margin-top: -126px;
     }
     #back{
-        margin-left: 30px;
+        margin-left: 20px;
     }
 }
